tests/parser-test-files/bad-files/parse-type.txt
================================================================================
Parse type nullary
================================================================================

(package test-package)

(declare f (T -> (G)))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:17
   |
 3 |  (declare f (T -> (G)))
   |                   ^^^ unexpected nullary type

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (T -> "T"))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:17
   |
 3 |  (declare f (T -> "T"))
   |                   ^^^ expected identifier

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (-> T))

--------------------------------------------------------------------------------

error: Malformed function type
  --> test:3:12
   |
 3 |  (declare f (-> T))
   |              ^^ invalid function syntax

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (T ->))

--------------------------------------------------------------------------------

error: Malformed function type
  --> test:3:14
   |
 3 |  (declare f (T ->))
   |                ^^ missing return type

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (=> T))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:12
   |
 3 |  (declare f (=> T))
   |              ^^ unnecessary `=>`
help: remove `=>`
 3 | (declare f T)
   |            -

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (=> T -> T))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:12
   |
 3 |  (declare f (=> T -> T))
   |              ^^ unnecessary `=>`
help: remove `=>`
 3 | (declare f (T -> T))
   |            --------

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (T :a =>))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:14
   |
 3 |  (declare f (T :a =>))
   |                ^^ missing type after `=>`

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (T => T -> T))

--------------------------------------------------------------------------------

error: Malformed type predicate
  --> test:3:12
   |
 3 |  (declare f (T => T -> T))
   |              ^ expected predicate

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f ("T" :a => T))

--------------------------------------------------------------------------------

error: Malformed type predicate
  --> test:3:12
   |
 3 |  (declare f ("T" :a => T))
   |              ^^^ expected identifier

================================================================================
Parse type
================================================================================

(package test-package)

(declare f (=>))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:12
   |
 3 |  (declare f (=>))
   |              ^^ unnecessary `=>`

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f (=> T -> T))

--------------------------------------------------------------------------------

error: Malformed type
  --> test:3:12
   |
 3 |  (declare f (=> T -> T))
   |              ^^ unnecessary `=>`
help: remove `=>`
 3 | (declare f (T -> T))
   |            --------

================================================================================
Parse Type
================================================================================

(package test-package)

(declare f ((T :a) T => T -> T))

--------------------------------------------------------------------------------

error: Malformed type predicate
  --> test:3:19
   |
 3 |  (declare f ((T :a) T => T -> T))
   |                     ^ expected predicate

================================================================================
Extra parentheses on class name
================================================================================

(package test-package)

(declare f ((T :a) ((T) :a) => T -> T))

--------------------------------------------------------------------------------

error: Malformed type predicate
  --> test:3:20
   |
 3 |  (declare f ((T :a) ((T) :a) => T -> T))
   |                      ^^^ expected class name
help: remove parentheses
 3 | (declare f ((T :a) (T :a) => T -> T))
   |                     -
